vcs/specs/meta-system/fail/hygiene/repetition_mismatch.vr
// @test: meta-fail
// @level: L1
// @tier: 0
// @tags: meta, hygiene, repetition, mismatch, error
// @expected-error: M409
// @description: Mismatched lengths in $[for...] expansion should fail with M409

// =============================================================================
// REPETITION WITH MISMATCHED LENGTHS
// =============================================================================

meta fn mismatched_repetition() -> TokenStream {
    let names = ["a", "b", "c"];     // 3 elements
    let types = [Int, Float];         // 2 elements - MISMATCH!

    quote {
        type Record is {
            // ERROR: names has 3 elements, types has 2
            $[for (name, ty) in zip(names, types) {
                $name: $ty,
            }]  // M409: RepetitionMismatch
        };
    }
}

// Another mismatch scenario
meta fn multi_list_mismatch() -> TokenStream {
    let a = [1, 2, 3, 4];     // 4 elements
    let b = ["x", "y"];        // 2 elements
    let c = [true, false, true];  // 3 elements

    quote {
        fn process() {
            $[for (x, y, z) in zip3(a, b, c) {
                handle($x, $y, $z);
            }]  // M409: All lists must have same length
        }
    }
}

// Empty list vs non-empty list
meta fn empty_mismatch() -> TokenStream {
    let items = [];           // Empty
    let labels = ["label1"];  // 1 element

    quote {
        $[for (item, label) in zip(items, labels) {
            show($label, $item);
        }]  // M409: 0 != 1
    }
}

fn main() {
    @mismatched_repetition();
}
